--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -168,12 +168,12 @@ get_lifetable_withPopulation <-
     # Life table for 
     lifetable_withPopulation <- 
       # Join lifetable and population by age 
-      dplyr::right_join(lifetable,
-                        population,
+      dplyr::left_join(population,
+                       lifetable,
                         by = "age")%>%
-      dplyr::right_join(.,
-                        nonNatural_mortality,
-                        by = "age")%>%
+      dplyr::left_join(.,
+                       nonNatural_mortality,
+                       by = "age")%>%
       # Rename the column to show that it is total (and not only natural) mortality
       dplyr::rename("death_probability_total" = "death_probability")%>%
       # We close the last row assigning a 1 for probability to die and 
@@ -816,22 +816,27 @@ impact_mortality_raw <- list()
 
 # Calculate mortality impacts using bestcost function
 
-for(i in 1:nrow(input_data_mortality)){
+for(i in 2){  #1:nrow(input_data_mortality) Activate this if you need multiple crfs
   impact_mortality_raw[[input_data_mortality$year[i]]][[input_data_mortality$crf_id[[i]]]] <-
   
     bestcost::assess_mortality_lifetable(
 
     exp = input_data_mortality$exp[i], # PM2.5=8.30=limit LRV CH, NO2=16.32=mean conc. in CH in 2019
     cf = input_data_mortality$cf[i],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
-    crf = unlist(input_data_mortality[i, 
-                            c("crf_mean", "crf_lowci", "crf_highci")]) ,
+    crf = unlist(input_data_mortality[i,
+                                      c("crf_mean", "crf_lowci", "crf_highci")]),
     crf_per = 10, 
-    crf_rescale_method = "loglinear", 
-    lifetable_withPop_male = lifetable_withPopulation[["male"]],
-    lifetable_withPop_female = lifetable_withPopulation[["female"]],
+    crf_rescale_method = "loglinear",
+    first_age_pop = 0,
+    last_age_pop = 99,
+    interval_age_pop = 1,
+    prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
+    prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
+    prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
+    prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
+    population_male = lifetable_withPopulation[["male"]]$population, 
+    population_female = lifetable_withPopulation[["female"]]$population, 
     firstYear_lifetable = 2019, 
-    nonNatural_death_male = mortality_data[["male"]], # % of non-natural male deaths in BHD
-    nonNatural_death_female = mortality_data[["female"]], # % of non-natural female deaths in BHD
     pollutant = input_data_mortality$pollutant[i], 
     age_group = input_data_mortality$outcome_group[i],
     min_age = 20,
