--- a/r_package/testing/Performance/Compare ARE method with new method/PER new method assess_mortality_lifetable().Rmd
+++ b/r_package/testing/Performance/Compare ARE method with new method/PER new method assess_mortality_lifetable().Rmd
@@ -31,7 +31,7 @@ profvis(bestcost::assess_mortality_lifetable(
     prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
     population_male = lifetable_withPopulation[["male"]]$population, 
     population_female = lifetable_withPopulation[["female"]]$population, 
-    firstYear_lifetable = 2019, 
+    year_of_analysis = 2019, 
     pollutant = input_data_mortality$pollutant[2], 
     age_group = input_data_mortality$outcome_group[2],
     min_age = 20,
