HEAD default instead of MAIN

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -56,8 +56,8 @@ if(!"bestcost" %in% installed.packages()[, "Package"]){
   credentials::set_github_pat() # paste github PAT when prompted
   devtools::install_github(repo = "best-cost/best-cost_WPs",
                            subdir = "/r_package/bestcost",
-                           # Branch (by default "MAIN")
-                           #ref = "natural_deaths_as_input",
+                           # Branch (by default "HEAD")
+                           ref = "HEAD",
                            force = TRUE)
 
 }
