--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -776,8 +776,8 @@ for (r in c("2019", "whoaqg21")){
 impact_morbidities <- 
   impact_morbidities_comparative %>%
   dplyr::bind_rows(.) %>%
-  # Remove column crf_ci
-  dplyr::select(-crf_ci, -crfConc, -af) %>%
+  # Remove column ci
+  dplyr::select(-crfConc, -af) %>%
   
   # Pivot wider the ci
   tidyr::pivot_wider(
@@ -818,7 +818,7 @@ impact_morbidities <-
                 contains("impact_diff_meanCI"),
                 contains("impact_ref_meanCI"), 
                 impact_whoaqg21_meanCI,
-                everything()) #%>%
+                everything())
 
 ```
 
