--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -898,7 +898,7 @@ impact_mortality <-
   impact_mortality_comparative %>%
   dplyr::bind_rows(.) %>%
   # Remove non relevant columns
-  dplyr::select(-case) %>%
+  dplyr::select(-case, -crf_ci) %>%
   
   # Pivot wider CI
   tidyr::pivot_wider(
