Add more frequent branches as comment

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -59,6 +59,8 @@ if(!"bestcost" %in% installed.packages()[, "Package"]){
                            # Branch (by default "HEAD")
                            # Other usual branches 
                            # "63-simplification-of-the-code"
+                           # "Variable_names"
+                           # "Small_code_changes"
                            ref = "HEAD",
                            force = TRUE)
 
