crfConc replaced with new name

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -782,7 +782,7 @@ impact_morbidities <-
   dplyr::bind_rows(.) %>%
 
   # Remove columns 
-  dplyr::select(-crfConc) %>%
+  dplyr::select(-crf_forPaf) %>%
 
   
   # Pivot wider the ci
