--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -12,17 +12,15 @@ Pending
 - healthiar vs. geluft in the package
 - test
 
-# Load input data
+# Load packages
 
 Load the Rdata file that contains all variables needed to run this script.
-```{r load input data}
+```{r load data}
 load("../testing/input/input data for testing_Rpackage.RData")
 ```
 
-# Load packages
 
 The R script required the loading of certain R packages. 
-
 ```{r Load packages, include=FALSE}
 
 # Load required packages
@@ -76,6 +74,20 @@ library(bestcost)
 # loads all functions in {bestcost}
 #devtools::load_all() 
 ```
+
+
+```{r Test probability of dying}
+# Use function
+prob_dying_airqplus <- 
+  bestcost::get_prob_dying(
+    first_age_pop = 0,
+    last_age_pop = 14,
+    interval_age_pop = 5,
+    population_midyear = airqplus_deaths_pop_multipleYear$mi,
+    deaths = airqplus_deaths_pop_multipleYear$di
+  )
+```
+
 
 # Calculate health impacts
 
