--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -58,13 +58,13 @@ if(!"bestcost" %in% installed.packages()[, "Package"]){
   #usethis::use_git_config(user.name = "YourName", user.email = "your@mail.com") # run if installation doesn't work
   credentials::set_github_pat() # paste github PAT when prompted
   devtools::install_github(repo = "best-cost/best-cost_WPs",
-                           subdir = "/r_package/exposure_distribution",
+                           subdir = "/r_package/bestcost",
                            # Branch (by default "HEAD")
                            # Other usual branches 
                            # "63-simplification-of-the-code"
                            # "Variable_names"
                            # "Small_code_changes"
-                           ref = "HEAD",
+                           ref = "exposure_distribution",
                            force = TRUE)
 
 }
