--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -64,7 +64,7 @@ if(!"bestcost" %in% installed.packages()[, "Package"]){
                            # "63-simplification-of-the-code"
                            # "Variable_names"
                            # "Small_code_changes"
-                           ref = "exposure_distribution",
+                           ref = "HEAD",
                            force = TRUE)
 
 }
@@ -91,13 +91,13 @@ prob_dying_airqplus <-
 
 # Calculate health impacts
 
-```{r impact exposure distribution}
+```{r morbidity using exposure distribution}
 
-impact_expDistribution_raw <- list()
+impact_morbidity_expDistribution_raw <- list()
 
 
 for(i in 1:nrow(input_data_morbidities)){
-  impact_expDistribution_raw[[input_data_morbidities$year[i]]][[input_data_morbidities$crf_id[[i]]]] <-
+  impact_morbidity_expDistribution_raw[[input_data_morbidities$year[i]]][[input_data_morbidities$crf_id[[i]]]] <-
   bestcost::assess_impact_single(
     exp = c(53, 57.5, 62.5, 67.5, 72.5, 77.5),
     prop_pop_exp = c(0.8187, 0.0743, 0.0549, 0.0368, 0.0138, 0.0015), # Fake values (just for testing purposes)
@@ -204,8 +204,45 @@ impact_morbidities <-
 
 
 
+```{r mortality using exposure distribution}
+impact_mortality_expDistribution_raw <- list()
+
+
+# Calculate mortality impacts using bestcost function
+
+for(i in 1:nrow(input_data_mortality)){  # Use this if you want to evaluate multiple crfs
+# for(i in 2){                           # Use this if you want to evaluate only one crfs
+  impact_mortality_expDistribution[[input_data_mortality$year[i]]][[input_data_mortality$crf_id[[i]]]] <-
+  
+    bestcost::assess_mortality_lifetable(
+    exp = c(8, 9, 10), # Fake data just for testing purposes
+    prop_pop_exp = c(0.2, 0.3, 0.5),
+    cf = input_data_mortality$cf[i],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
+    crf = unlist(input_data_mortality[i,
+                                      c("crf_mean", "crf_lowci", "crf_highci")]),
+    crf_per = 10, 
+    crf_rescale_method = "loglinear",
+    first_age_pop = 0,
+    last_age_pop = 99,
+    interval_age_pop = 1,
+    prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
+    prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
+    prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
+    prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
+    population_male = lifetable_withPopulation[["male"]]$population, 
+    population_female = lifetable_withPopulation[["female"]]$population, 
+    year_of_analysis = 2019, 
+    info_pollutant = input_data_mortality$pollutant[i], 
+    min_age = input_data_mortality$min_age[i],
+    max_age = input_data_mortality$max_age[i],
+    corrected_discount_rate = 0)
+}
+```
+
+
 ```{r impact mortality}
 impact_mortality_raw <- list()
+
 
 # Calculate mortality impacts using bestcost function
 
